--- a/Menu deroulant/css/index.css
+++ b/Menu deroulant/css/index.css
@@ -1,7 +1,11 @@
 body {
     padding: 0;
     margin: 0;
-    background: rgb(173, 206, 188);
+    background: white;
+}
+
+h1 {
+    text-align: center;
 }
 
 .toggle_btn {
@@ -43,7 +47,7 @@ body {
 
 .menu {
     height: 400px;
-    background-color: black;
+    background-color: rgb(15, 17, 141);
     width: 200px;
 }
 
@@ -96,4 +100,8 @@ footer {
     width: 100%;
     height: 80px;
     background-color: brown;
+}
+
+.copyright {
+    text-align: center;
 }
