--- a/Menu-deroulant-horizontal/inc/css/style.css
+++ b/Menu-deroulant-horizontal/inc/css/style.css
@@ -116,8 +116,9 @@ footer {
 }
 
 img {
-    width: 600px;
-    height: 300px;
+    width: 700px;
+    height: 350px;
     float: right;
-    margin-right: -350px;
+    margin-right: -430px;
+    margin-bottom: 75px;
 }
